# Alpha-Predator

./: .env.example  .gitignore  README.md  pyproject.toml
data/portfolio/: positions.json
docs/external_apis/: akshare_api_reference.md
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: AnalysisFlow.vue  Dashboard.vue  PortfolioManager.vue  SectorCard.vue  SettingsPanel.vue  StockRecommendation.vue
scripts/: verify_fix.py
src/: __init__.py  config.py  main.py
src/ai/: __init__.py
src/ai/llm/: __init__.py  base.py  factory.py  gemini.py  openai_llm.py  prompts.py  qwen.py
src/analysis/: __init__.py
src/analysis/technical/: __init__.py  indicators.py  patterns.py  signals.py
src/api/: main.py
src/core/: alpha_predator.py  deep_dive.py
src/data/: __init__.py
src/data/news/: __init__.py  announcements.py  csrc_announcements.py
src/data/portfolio/: __init__.py  portfolio_manager.py
src/data/sources/: __init__.py  factory.py  ths_client.py  tushare_client.py
src/notification/: __init__.py  email.py  webhook.py
src/utils/: trading_time.py
tests/: test_llm.py  test_technical.py
